[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/button_background.png" type="Texture" id=1]
[ext_resource path="res://assets/button_background_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/Steinberg.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/game_over_menu.gd" type="Script" id=5]
[ext_resource path="res://assets/sound/select_click.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/retro_hover.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
extra_spacing_top = 4
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 3
font_data = ExtResource( 4 )

[node name="GameMenu" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.854902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer" groups=[
"menu_buttons",
]]
pause_mode = 2
visible = false
margin_right = 160.0
margin_bottom = 50.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/PlayAgainButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "PLAY AGAIN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer" groups=[
"menu_buttons",
]]
pause_mode = 2
visible = false
margin_top = 54.0
margin_right = 160.0
margin_bottom = 104.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/ResumeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "RESUME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer" groups=[
"menu_buttons",
]]
visible = false
margin_right = 160.0
margin_bottom = 50.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/NextLevelButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "NEXT LEVEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer" groups=[
"menu_buttons",
]]
pause_mode = 2
visible = false
margin_right = 160.0
margin_bottom = 50.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/MainMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer" groups=[
"menu_buttons",
]]
pause_mode = 2
visible = false
margin_right = 160.0
margin_bottom = 50.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "EXIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterLabel" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -222.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelPassed" type="Label" parent="Menu/CenterLabel"]
margin_left = 417.0
margin_top = 176.0
margin_right = 607.0
margin_bottom = 202.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.388235, 0.945098, 1, 1 )
text = "LEVEL CLEARED"

[node name="ButtonHoverAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = 2.0

[node name="ButtonClickAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
